--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kanban Board</title>
 </head>
 <body>
+    <div class="board">
+        <div class="column" id="todo">
+            <h2>To Do</h2>
+            <div class="tasks" id="todo-tasks"></div>
+            <input type="text" class="task-input" id="todo-input" placeholder="Add a task">
+            <button class="add-task" onclick="lib.addTask('todo')">Add task</button>
+        </div>
+        <div class="column" id="doing">
+            <h2>Doing</h2>
+            <div class="tasks" id="todo-tasks"></div>
+            <input type="text" class="task-input" id="todo-input" placeholder="Add a task">
+            <button class="add-task" onclick="lib.addTask('doing')">Add task</button>
+        </div>  
+        <div class="column" id="done">
+            <h2>Done</h2>
+            <div class="tasks" id="todo-tasks"></div>
+            <input type="text" class="task-input" id="todo-input" placeholder="Add a task">
+            <button class="add-task" onclick="lib.addTask('done')">Add task</button>
+        </div>
+    </div>
     
 </body>
 </html>
