add context menu for task cards with edit and delete options; improve drag-and-drop functionality

--- a/src/template.html
+++ b/src/template.html
@@ -27,5 +27,11 @@
         </div>
     </div>
     
+    <div class="context-menu">
+        <ul>
+            <li onclick="lib.editTask()">Edit</li>
+            <li onclick="lib.deleteTask()">Delete</li>
+        </ul>
+    </div>
 </body>
 </html>
