--- a/src/template.html
+++ b/src/template.html
@@ -8,19 +8,19 @@
 <body>
     <div class="board">
         <div class="column" id="todo">
-            <h2>To Do</h2>
+            <h2>To Do (<span id="todo-count">0</span>)</h2>
             <div class="tasks" id="todo-tasks"></div>
             <input type="text" class="task-input" id="todo-input" placeholder="Add a task">
             <button class="add-task" onclick="lib.addTask('todo')">Add task</button>
         </div>
         <div class="column" id="doing">
-            <h2>Doing</h2>
+            <h2>Doing (<span id="doing-count">0</span>)</h2>
             <div class="tasks" id="doing-tasks"></div>
             <input type="text" class="task-input" id="doing-input" placeholder="Add a task">
             <button class="add-task" onclick="lib.addTask('doing')">Add task</button>
         </div>  
         <div class="column" id="done">
-            <h2>Done</h2>
+            <h2>Done (<span id="done-count">0</span>)</h2>
             <div class="tasks" id="done-tasks"></div>
             <input type="text" class="task-input" id="done-input" placeholder="Add a task">
             <button class="add-task" onclick="lib.addTask('done')">Add task</button>
